# pcl

apps/sq_fitting/: CMakeLists.txt  README.md
apps/sq_fitting/demo/: CMakeLists.txt  demo.cpp
apps/sq_fitting/demo/tabletop_segmentation/: CMakeLists.txt  tabletop_segmentation.h
apps/sq_fitting/demo/tabletop_symmetry/: CMakeLists.txt
apps/sq_fitting/demo/tabletop_symmetry/impl/: mindGapper.hpp
apps/sq_fitting/include/: SQ_fitter.h  SQ_structs.h  analytic_equations.h
apps/sq_fitting/include/impl/: SQ_fitter.hpp
apps/sq_fitting/src/: SQ_utils.cpp  analytic_equations.cpp
apps/sq_fitting/tests/: CMakeLists.txt  SQ_fitter_test1.cpp  funcEq.txt  jacobianEq.txt  levmarEq.m  levmar_test.cpp  levmar_test5.cpp  sampleSQ.cpp
